# pixel-engine

./: .gitignore  CMakeLists.txt  README.md  main.cpp  run.sh
src/: PixelGame.cpp  PixelGame.hpp  TextureManager.cpp  TextureManager.hpp
